--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="assets/styles/animations.css">
-    <link rel="stylesheet" href="assets/styles/main.css">
     <link rel="stylesheet" href="../src/components/code-side/code-side.css">
     <link rel="stylesheet" href="../src/components/test-case/test-case.css">
-
     <link rel="stylesheet" href="../src/components/graph-side/graph-side.css">
-    <title>Document</title>
+    
+    <link rel="stylesheet" href="assets/styles/main.css">
+    <title>BenchMark</title>
 </head>
 <body>
     <div class="code-side">
@@ -64,11 +64,38 @@
     </div>
     <div class="graph-side">
         <svg width="300px" heigth="300px" viewBox="0 0 300 300">
-            <rect x="0" y="0" width="5" height="150" fill="red"></rect>
-            <rect x="50" y="0" width="5" height="200" fill="red"></rect>
-            <rect x="100" y="0" width="5" height="250" fill="red"></rect>
-            <rect x="150" y="0" width="5" height="300" fill="red"></rect>
+            <g id="bg-line">
+                <rect x="56" y="0" width="5" height="300" fill="black"></rect>
+                <rect x="112" y="0" width="5" height="300" fill="black"></rect>
+                <rect x="168" y="0" width="5" height="300" fill="black"></rect>
+                <rect x="224" y="0" width="5" height="300" fill="black"></rect>    
+            </g>
+            <g id="graph-line">
+                <rect x="56" y="0" width="5" height="150" fill="red"></rect>
+                <rect x="112" y="0" width="5" height="200" fill="orange"></rect>
+                <rect x="168" y="0" width="5" height="250" fill="yellow"></rect>
+                <rect x="224" y="0" width="5" height="100" fill="green"></rect>    
+            </g>
         </svg>
+
+        <div class="numbers">
+            <div class="number-container">
+                <span>1</span>
+                <span>0%</span>
+            </div>
+            <div class="number-container">
+                <span>2</span>
+                <span>100%</span>
+            </div>
+            <div class="number-container">
+                <span>3</span>
+                <span>0%</span>
+            </div>
+            <div class="number-container">
+                <span>4</span>
+                <span>100%</span>
+            </div>           
+        </div>
     </div>
 </body>
 </html>
