advance: ops calculte ready, with the percentages on graph and height of the graph, and include an animate svg, to ops loading

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,74 @@
                 <h3>Test Cases</h3>
                 <button class="basic-button" aria-label="add case" id="add-test-case">Add Case +</button>
             </header>
-            <div class="test-cases-container"></div>
+            <div class="test-cases-container">
+                <div class="test-case" data-value="1">
+                    <header>
+                        <div class="left">
+                            <p class="test-case-number">1</p>
+                            <label for="test-case-textarea" class="test-case-label">Test Case</label>
+                        </div>
+                        <div class="right">
+                            <p class="ops"></p>
+                            <div class="copy-container">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+                                    <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"></path>
+                                <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1"></path>
+                                </svg>
+                            </div>
+                            <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+                                <path d="M7 4l10 16"></path>
+                                <path d="M17 4l-10 16"></path>
+                            </svg>
+                        </div>
+                    </header>
+                    <textarea name="textarea-test-case" id="test-case-textarea" class="test-case-textarea">data.find(x => x == 100)</textarea>
+                </div>
+                <div class="test-case" data-value="2">
+                    <header>
+                        <div class="left">
+                            <p class="test-case-number">2</p>
+                            <label for="test-case-textarea" class="test-case-label">Test Case</label>
+                        </div>
+                        <div class="right">
+                            <p class="ops"></p>
+                            <div class="copy-container">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+                                    <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"></path>
+                                <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1"></path>
+                                </svg>
+                            </div>
+                            <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+                                <path d="M7 4l10 16"></path>
+                                <path d="M17 4l-10 16"></path>
+                            </svg>
+                        </div>
+                    </header>
+                    <textarea name="textarea-test-case" id="test-case-textarea" class="test-case-textarea">data.find(x => x == 300)</textarea>
+                </div>
+                <div class="test-case" data-value="3">
+                    <header>
+                        <div class="left">
+                            <p class="test-case-number">3</p>
+                            <label for="test-case-textarea" class="test-case-label">Test Case</label>
+                        </div>
+                        <div class="right">
+                            <p class="ops"></p>
+                            <div class="copy-container">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+                                    <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"></path>
+                                <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1"></path>
+                                </svg>
+                            </div>
+                            <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+                                <path d="M7 4l10 16"></path>
+                                <path d="M17 4l-10 16"></path>
+                            </svg>
+                        </div>
+                    </header>
+                    <textarea name="textarea-test-case" id="test-case-textarea" class="test-case-textarea">data.find(x => x == 700)</textarea>
+                </div>
+            </div>
         </div>
     </section>
     <section class="graph-side">
