advance: UX, color, numbers format, and  function

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                     <header>
                         <div class="left">
                             <p class="test-case-number">1</p>
-                            <label for="test-case-textarea" class="test-case-label">Test Case</label>
+                            <label for="test-case-textarea-1" class="test-case-label">Test Case</label>
                         </div>
                         <div class="right">
                             <p class="ops"></p>
@@ -62,13 +62,13 @@
                             </svg>
                         </div>
                     </header>
-                    <textarea name="textarea-test-case" id="test-case-textarea" class="test-case-textarea">data.find(x => x == 100)</textarea>
+                    <textarea name="textarea-test-case" id="test-case-textarea-1" class="test-case-textarea">data.find(x => x == 100)</textarea>
                 </div>
                 <div class="test-case" data-value="2">
                     <header>
                         <div class="left">
                             <p class="test-case-number">2</p>
-                            <label for="test-case-textarea" class="test-case-label">Test Case</label>
+                            <label for="test-case-textarea-2" class="test-case-label">Test Case</label>
                         </div>
                         <div class="right">
                             <p class="ops"></p>
@@ -84,13 +84,13 @@
                             </svg>
                         </div>
                     </header>
-                    <textarea name="textarea-test-case" id="test-case-textarea" class="test-case-textarea">data.find(x => x == 300)</textarea>
+                    <textarea name="textarea-test-case" id="test-case-textarea-2" class="test-case-textarea">data.find(x => x == 300)</textarea>
                 </div>
                 <div class="test-case" data-value="3">
                     <header>
                         <div class="left">
                             <p class="test-case-number">3</p>
-                            <label for="test-case-textarea" class="test-case-label">Test Case</label>
+                            <label for="test-case-textarea-3" class="test-case-label">Test Case</label>
                         </div>
                         <div class="right">
                             <p class="ops"></p>
@@ -106,13 +106,13 @@
                             </svg>
                         </div>
                     </header>
-                    <textarea name="textarea-test-case" id="test-case-textarea" class="test-case-textarea">data.find(x => x == 700)</textarea>
+                    <textarea name="textarea-test-case" id="test-case-textarea-3" class="test-case-textarea">data.find(x => x == 700)</textarea>
                 </div>
             </div>
         </div>
     </section>
     <section class="graph-side">
-        <svg width="300px" heigth="300px" viewBox="0 0 300 300" class="graph-svg">
+        <svg width="400px" heigth="90%" viewBox="0 0 300 300" class="graph-svg">
         </svg>
             
         <div class="numbers">        
