--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,12 @@
                     <div class="control-enter">
                         Ctrl + Enter
                     </div>
-                    <button class="run-test basic-button run-test-animation" aria-label="Run Tests" id="run-test">
+                    <button class="run-test basic-button run-test-animation" aria-label="Run Tests" id="run-test" title="run test cases">
                         Run Tests
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M19.933 13.041a8 8 0 1 1 -9.925 -8.788c3.899 -1 7.935 1.007 9.425 4.747"></path> <path d="M20 4v5h-5"></path> </svg> 
                     </button>
-                    <button class="save-url basic-button" aria-label="Save URL">
+                    <button class="save-url basic-button" aria-label="Save URL" id="save-url" title="create new url">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2"></path> <path d="M12 14m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path> <path d="M14 4l0 4l-6 0l0 -4"></path> </svg> 
-                        
-                        <svg width="20" height="20" viewBox="0 0 10 16" aria-hidden="true" stroke="currentColor"><path fill-rule="evenodd" d="M8 1a1.993 1.993 0 00-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 002 1a1.993 1.993 0 00-1 3.72V6.5l3 3v1.78A1.993 1.993 0 005 15a1.993 1.993 0 001-3.72V9.5l3-3V4.72A1.993 1.993 0 008 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"></path></svg>
                     </button>
                 </div>    
             </header>
@@ -41,7 +39,7 @@
         <div class="test-cases">
             <header class="test-cases-header">
                 <h3>Test Cases</h3>
-                <button class="basic-button" aria-label="add case" id="add-test-case">Add Case +</button>
+                <button class="basic-button" aria-label="add case" id="add-test-case" title="add test case">Add Case +</button>
             </header>
             <div class="test-cases-container">
                 <div class="test-case" data-value="1">
