advance: set values and quantity of test case, of the storage

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,11 @@
                         Run Tests
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M19.933 13.041a8 8 0 1 1 -9.925 -8.788c3.899 -1 7.935 1.007 9.425 4.747"></path> <path d="M20 4v5h-5"></path> </svg> 
                     </button>
-                    <button class="save-url basic-button" aria-label="Save URL" id="save-url" title="create new url">
+                    <button class="save-url basic-button" aria-label="Save URL" id="save-url" title="save on this url">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2"></path> <path d="M12 14m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path> <path d="M14 4l0 4l-6 0l0 -4"></path> </svg> 
+                    </button>
+                    <button class="save-url-open-window basic-button" aria-label="Save URL" id="save-url" title="create new url">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M3 10l11 11"></path> <path d="M14 17v4h-4"></path> <path d="M14 3h-4v4"></path> <path d="M21 14l-11 -11"></path> </svg> 
                     </button>
                 </div>    
             </header>
