comments and debugging

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                             </svg>
                         </div>
                     </header>
-                    <div aria-label="textarea-test-case" id="test-case-textarea-1" class="code test-case-textarea" contenteditable="true"> data.find(x => x == 100)</div>
+                    <div aria-label="textarea-test-case" id="test-case-textarea-1" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 100)</div>
                 </div>
                 <div class="test-case" data-value="2">
                     <header>
@@ -87,7 +87,7 @@
                             </svg>
                         </div>
                     </header>
-                    <div aria-label="textarea-test-case" id="test-case-textarea-2" class="code test-case-textarea" contenteditable="true"> data.find(x => x == 300)</div>
+                    <div aria-label="textarea-test-case" id="test-case-textarea-2" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 300)</div>
                 </div>
                 <div class="test-case" data-value="3">
                     <header>
@@ -109,7 +109,7 @@
                             </svg>
                         </div>
                     </header>
-                    <div aria-label="textarea-test-case" id="test-case-textarea-3" class="code test-case-textarea" contenteditable="true"> data.find(x => x == 900)</div>
+                    <div aria-label="textarea-test-case" id="test-case-textarea-3" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 900)</div>
                 </div>
             </div>
         </div>
