--- a/public/index.html
+++ b/public/index.html
@@ -53,16 +53,18 @@
                         </div>
                         <div class="right">
                             <p class="ops"></p>
-                            <div class="copy-container">
+                            <button class="copy-container" title="copy test case text">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
                                     <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"></path>
                                 <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1"></path>
                                 </svg>
-                            </div>
-                            <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
-                                <path d="M7 4l10 16"></path>
-                                <path d="M17 4l-10 16"></path>
-                            </svg>
+                            </button>
+                            <button class="delete-container" title="delete test case">
+                                <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+                                    <path d="M7 4l10 16"></path>
+                                    <path d="M17 4l-10 16"></path>
+                                </svg>    
+                            </button>
                         </div>
                     </header>
                     <div aria-label="textarea-test-case" id="test-case-textarea-1" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 100)</div>
@@ -75,16 +77,18 @@
                         </div>
                         <div class="right">
                             <p class="ops"></p>
-                            <div class="copy-container">
+                            <button class="copy-container" title="copy test case text">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
                                     <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"></path>
                                 <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1"></path>
                                 </svg>
-                            </div>
-                            <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
-                                <path d="M7 4l10 16"></path>
-                                <path d="M17 4l-10 16"></path>
-                            </svg>
+                            </button>
+                            <button class="delete-container" title="delete test case">
+                                <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+                                    <path d="M7 4l10 16"></path>
+                                    <path d="M17 4l-10 16"></path>
+                                </svg>    
+                            </button>
                         </div>
                     </header>
                     <div aria-label="textarea-test-case" id="test-case-textarea-2" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 300)</div>
@@ -97,16 +101,18 @@
                         </div>
                         <div class="right">
                             <p class="ops"></p>
-                            <div class="copy-container">
+                            <button class="copy-container" title="copy test case text">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
                                     <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"></path>
                                 <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1"></path>
                                 </svg>
-                            </div>
-                            <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
-                                <path d="M7 4l10 16"></path>
-                                <path d="M17 4l-10 16"></path>
-                            </svg>
+                            </button>
+                            <button class="delete-container" title="delete test case">
+                                <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+                                    <path d="M7 4l10 16"></path>
+                                    <path d="M17 4l-10 16"></path>
+                                </svg>    
+                            </button>
                         </div>
                     </header>
                     <div aria-label="textarea-test-case" id="test-case-textarea-3" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 900)</div>
