--- a/public/index.html
+++ b/public/index.html
@@ -53,13 +53,13 @@
                         </div>
                         <div class="right">
                             <p class="ops"></p>
-                            <button class="copy-container" title="copy test case text">
+                            <button class="copy-container" title="copy test case text" aria-label="copy test case text">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
                                     <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"></path>
                                 <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1"></path>
                                 </svg>
                             </button>
-                            <button class="delete-container" title="delete test case">
+                            <button class="delete-container" title="delete test case" aria-label="delete test case">
                                 <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
                                     <path d="M7 4l10 16"></path>
                                     <path d="M17 4l-10 16"></path>
@@ -77,13 +77,13 @@
                         </div>
                         <div class="right">
                             <p class="ops"></p>
-                            <button class="copy-container" title="copy test case text">
+                            <button class="copy-container" title="copy test case text" aria-label="copy test case text">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
                                     <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"></path>
                                 <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1"></path>
                                 </svg>
                             </button>
-                            <button class="delete-container" title="delete test case">
+                            <button class="delete-container" title="delete test case" aria-label="delete test case">
                                 <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
                                     <path d="M7 4l10 16"></path>
                                     <path d="M17 4l-10 16"></path>
@@ -101,13 +101,13 @@
                         </div>
                         <div class="right">
                             <p class="ops"></p>
-                            <button class="copy-container" title="copy test case text">
+                            <button class="copy-container" title="copy test case text" aria-label="copy test case text">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
                                     <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"></path>
                                 <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1"></path>
                                 </svg>
                             </button>
-                            <button class="delete-container" title="delete test case">
+                            <button class="delete-container" title="delete test case" aria-label="delete test case">
                                 <svg class="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
                                     <path d="M7 4l10 16"></path>
                                     <path d="M17 4l-10 16"></path>
