--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,15 @@
                         Run Tests
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M19.933 13.041a8 8 0 1 1 -9.925 -8.788c3.899 -1 7.935 1.007 9.425 4.747"></path> <path d="M20 4v5h-5"></path> </svg> 
                     </button>
-                    <button class="save-url basic-button" aria-label="Save URL" id="save-url" title="save on this url">
+                    <button class="save-url basic-button" aria-label="Save URL" title="save on this url">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2"></path> <path d="M12 14m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path> <path d="M14 4l0 4l-6 0l0 -4"></path> </svg> 
                     </button>
-                    <button class="save-url-open-window basic-button" aria-label="Save URL" id="save-url" title="create new url">
+                    <button class="save-url-open-window basic-button" aria-label="Save URL" title="create new url">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M3 10l11 11"></path> <path d="M14 17v4h-4"></path> <path d="M14 3h-4v4"></path> <path d="M21 14l-11 -11"></path> </svg> 
                     </button>
                 </div>    
             </header>
-            <div aria-label="global-code" id="global-textarea" class="code" contenteditable="true"> const data = [...Array(1000).keys()]</div>
+            <output aria-label="global-code" id="global-textarea" class="code" contenteditable="true" role="textbox"> const data = [...Array(1000).keys()]</output>
         </div>
         <div class="test-cases">
             <header class="test-cases-header">
@@ -67,7 +67,7 @@
                             </button>
                         </div>
                     </header>
-                    <div aria-label="textarea-test-case" id="test-case-textarea-1" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 100)</div>
+                    <output aria-label="textarea-test-case" id="test-case-textarea-1" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 100)</output>
                 </div>
                 <div class="test-case" data-value="2">
                     <header>
@@ -91,7 +91,7 @@
                             </button>
                         </div>
                     </header>
-                    <div aria-label="textarea-test-case" id="test-case-textarea-2" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 300)</div>
+                    <output aria-label="textarea-test-case" id="test-case-textarea-2" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 300)</output>
                 </div>
                 <div class="test-case" data-value="3">
                     <header>
@@ -115,7 +115,7 @@
                             </button>
                         </div>
                     </header>
-                    <div aria-label="textarea-test-case" id="test-case-textarea-3" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 900)</div>
+                    <output aria-label="textarea-test-case" id="test-case-textarea-3" class="code test-case-textarea" contenteditable="true" role="textbox"> data.find(x => x == 900)</output>
                 </div>
             </div>
         </div>
@@ -125,12 +125,47 @@
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M12 12.75m-4 0a4 1.75 0 1 0 8 0a4 1.75 0 1 0 -8 0"></path> <path d="M8 12.5v3.75c0 .966 1.79 1.75 4 1.75s4 -.784 4 -1.75v-3.75"></path> <path d="M14 3v4a1 1 0 0 0 1 1h4"></path> <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"></path> </svg> 
             </div>
-            </button>
+        </button>
+        <article class="history-modal">
+            <div class="search-input">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-search">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
+                    <path d="M21 21l-6 -6" />
+                </svg>
+                <label for="search-archive">Search archive</label>
+                <input id="search-archive" type="text" placeholder="Search an archive" name="search archive" aria-label="search archive">
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://github.com/perflink/perflink/archive/refs/heads/main.zip">Archive 1</a>
+                        <button delete-archive aria-label="delete archive" title="delete archive">
+                            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-database-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 6c0 1.657 3.582 3 8 3s8 -1.343 8 -3s-3.582 -3 -8 -3s-8 1.343 -8 3" /><path d="M4 6v6c0 1.657 3.582 3 8 3c.537 0 1.062 -.02 1.57 -.058" /><path d="M20 13.5v-7.5" /><path d="M4 12v6c0 1.657 3.582 3 8 3c.384 0 .762 -.01 1.132 -.03" /><path d="M22 22l-5 -5" /><path d="M17 22l5 -5" /></svg>
+                        </button>
+                    </li>
+                    <li>
+                        <a href="https://github.com/perflink/perflink/archive/refs/heads/main.zip">Archive 2</a>
+                        <button aria-label="delete archive" title="delete archive">
+                            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-database-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 6c0 1.657 3.582 3 8 3s8 -1.343 8 -3s-3.582 -3 -8 -3s-8 1.343 -8 3" /><path d="M4 6v6c0 1.657 3.582 3 8 3c.537 0 1.062 -.02 1.57 -.058" /><path d="M20 13.5v-7.5" /><path d="M4 12v6c0 1.657 3.582 3 8 3c.384 0 .762 -.01 1.132 -.03" /><path d="M22 22l-5 -5" /><path d="M17 22l5 -5" /></svg>
+                        </button>
+                    </li>
+                    <li>
+                        <a href="https://github.com/perflink/perflink/archive/refs/heads/main.zip">Archive 3</a>
+                        <button aria-label="delete archive" title="delete archive">
+                            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-database-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 6c0 1.657 3.582 3 8 3s8 -1.343 8 -3s-3.582 -3 -8 -3s-8 1.343 -8 3" /><path d="M4 6v6c0 1.657 3.582 3 8 3c.537 0 1.062 -.02 1.57 -.058" /><path d="M20 13.5v-7.5" /><path d="M4 12v6c0 1.657 3.582 3 8 3c.384 0 .762 -.01 1.132 -.03" /><path d="M22 22l-5 -5" /><path d="M17 22l5 -5" /></svg>
+                        </button>
+                    </li>
+                </ul>
+            </nav>
+        </article>
         <button class="basic-button terminal" aria-label="terminal" titlee="terminal">
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M8 9l3 3l-3 3"></path> <path d="M13 15l3 0"></path> <path d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"></path> </svg> 
             </div>
-            </button>
+        </button>
+        <div class="terminal-modal">
+        </div>
         <svg width="400px" heigth="90%" viewBox="0 0 300 300" class="graph-svg">
         </svg>
             
