--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M12 12.75m-4 0a4 1.75 0 1 0 8 0a4 1.75 0 1 0 -8 0"></path> <path d="M8 12.5v3.75c0 .966 1.79 1.75 4 1.75s4 -.784 4 -1.75v-3.75"></path> <path d="M14 3v4a1 1 0 0 0 1 1h4"></path> <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"></path> </svg> 
             </div>
         </button>
-        <article class="history-modal">
+        <article class="history-modal" aria-label="history-modal">
             <div class="search-input">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-search">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -141,12 +141,19 @@
                 </ul>
             </nav>
         </article>
-        <button class="basic-button terminal" aria-label="terminal" titlee="terminal">
+        <button class="basic-button terminal" aria-label="terminal" titlee="terminal" id="terminal-button">
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M8 9l3 3l-3 3"></path> <path d="M13 15l3 0"></path> <path d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"></path> </svg> 
             </div>
         </button>
-        <div class="terminal-modal">
+        <div class="terminal-modal" aria-label="terminal-modal">
+            <output>
+*********************
+✨ Bienvenido a tu Terminal Web ✨
+Tu puerta hacia un mundo de posibilidades.
+Escribe tu comando y prepárate para crear algo increíble 🚀
+*********************
+            </output>
         </div>
         <svg width="400px" heigth="90%" viewBox="0 0 300 300" class="graph-svg">
         </svg>
