issue: red color of loading svg fixed, inner Error messages to terminal

--- a/public/index.html
+++ b/public/index.html
@@ -147,13 +147,13 @@
             </div>
         </button>
         <div class="terminal-modal" aria-label="terminal-modal">
-            <output>
+<output>
 *********************
-✨ Bienvenido a tu Terminal Web ✨
-Tu puerta hacia un mundo de posibilidades.
-Escribe tu comando y prepárate para crear algo increíble 🚀
+✨ Welcome to PerfLink ✨
+Here you will find the error messages of the test cases.
+🚀
 *********************
-            </output>
+</output>
         </div>
         <svg width="400px" heigth="90%" viewBox="0 0 300 300" class="graph-svg">
         </svg>
