advance: removing, welcome message

--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
             </div>
         </button>
         <div class="terminal-modal" aria-label="terminal-modal">
-<output>
+<output class="welcome-message">
 *********************
 ✨ Welcome to PerfLink ✨
 Here you will find the error messages of the test cases.
