advance: terminal with clear function

--- a/public/index.html
+++ b/public/index.html
@@ -153,6 +153,7 @@ Here you will find the error messages of the test cases.
 🚀
 *********************
 </output>
+            <button class="basic-button">Clear</button>
         </div>
         <svg width="400px" heigth="90%" viewBox="0 0 300 300" class="graph-svg">
         </svg>
