--- a/public/index.html
+++ b/public/index.html
@@ -128,13 +128,13 @@
         </button>
         <article class="history-modal" aria-label="history-modal">
             <div class="search-input">
+                <label for="search-archive">Search archive</label>
+                <input id="search-archive" type="text" placeholder="Search an archive" name="search archive" aria-label="search archive">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-search">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
                     <path d="M21 21l-6 -6" />
                 </svg>
-                <label for="search-archive">Search archive</label>
-                <input id="search-archive" type="text" placeholder="Search an archive" name="search archive" aria-label="search archive">
             </div>
             <nav>
                 <ul>
@@ -146,16 +146,35 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M8 9l3 3l-3 3"></path> <path d="M13 15l3 0"></path> <path d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"></path> </svg> 
         </button>
         <div class="terminal-modal" aria-label="terminal-modal">
-<output class="welcome-message">
-*********************
+<div class="message-container">
+<output class="welcome-message">*********************
 ✨ Welcome to PerfLink ✨
 Here you will find the error messages of the test cases.
 🚀
 *********************
-</output>
-            <button class="basic-button">Clear</button>
+considerations:
+
+1. The code is not saved on a file, so if declare a variable in the global scope, it wont be available on the web terminal.
+
+2. The terminal is just for testing the code, and print with console, but no for debugging. so you can't print the variables declared on test cases or global code.
+
+3. If you need to use a terminal, you can use the console of the browser.
+
+4. The code Saved with button save on this url, wont generate a history, if you want to save diferent code, yo can use the button create new url.
+
+5. The history show you each url created, and you can see the code saved on it.
+
+6. Button, save on this url, will overwrite the code saved on the url.
+
+7. Use ; at the end of the line, to avoid errors;
+</output>        
+</div>
+<div class="input-terminal">
+    <input type="text" placeholder="Type your commands" name="input-terminal" aria-label="input-terminal">
+    <button class="basic-button">Clear</button>
+</div>
         </div>
-        <svg width="400px" heigth="90%" viewBox="0 0 300 300" class="graph-svg">
+        <svg width="80%" heigth="90%" viewBox="0 0 300 300" class="graph-svg">
         </svg>
             
         <div class="numbers">        
